# Picture-PreProcessing

./: CMakeLists.txt  README.md  out.json  package.xml  painting_setup.py  sample_conf.json
scripts/: painting_setup.py
