cmake_minimum_required(VERSION 2.8.3)
project(Picture-PreProcessing)

find_package(catkin REQUIRED rospy roslib)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES Picture-PreProcessing
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)